apps/mycel-cli/tests/snapshots/store_index_smoke__store_index_head_only_json_prunes_non_head_sections.snap
---
source: apps/mycel-cli/tests/store_index_smoke.rs
expression: json
---
{
  "author_patches": {},
  "current_document_governance": {},
  "current_document_governance_profile_count": 1,
  "current_governance": {},
  "current_maintainer_governance": {},
  "current_maintainer_governance_document_count": 1,
  "current_maintainer_governance_profile_count": 1,
  "doc_revisions": {},
  "document_views": {},
  "filters": {
    "author": null,
    "doc_id": null,
    "maintainer": null,
    "object_type": null,
    "profile_id": null,
    "revision_id": null,
    "view_id": null
  },
  "maintainer_views": {},
  "manifest_path": "[manifest_path]",
  "object_ids_by_type": {},
  "profile_heads": {
    "hash:c9af8de669008e239e9df7ff11956a2d4130bf07c6f129e58cd89c4bf37dc9ab": {
      "doc:index": [
        "rev:4bb946a431a7c48d3eb7a3789886dd220c235bfc033c6a9a8c55e263a9364ced"
      ]
    }
  },
  "profile_views": {},
  "projection": "head-only",
  "revision_parents": {},
  "status": "ok",
  "store_root": "[store_root]",
  "stored_object_count": 3,
  "view_governance": []
}
